# ipiranga-python-integration-factory

./: README.md  pyproject.toml
generator/: cli.py  scaffold.py  validators.py
generator/renderers/: __init__.py  rest_renderer.py
ipiranga-python-integration-factory/ipiranga-python-integration-factory/: README.md  pyproject.toml
ipiranga-python-integration-factory/ipiranga-python-integration-factory/examples/: rest_service.yml
ipiranga-python-integration-factory/ipiranga-python-integration-factory/generator/: __init__.py  spec_loader.py  validators.py
ipiranga-python-integration-factory/ipiranga-python-integration-factory/generator/renderers/: rest_renderer.py
ipiranga-python-integration-factory/ipiranga-python-integration-factory/templates/rest/: README.md
ipiranga-python-integration-factory/ipiranga-python-integration-factory/templates/rest/app/: main.py
ipiranga-python-integration-factory/ipiranga-python-integration-factory/templates/rest/app/api/: inbound.py
ipiranga-python-integration-factory/ipiranga-python-integration-factory/templates/rest/app/domain/: backend_payload.py
ipiranga-python-integration-factory/ipiranga-python-integration-factory/templates/rest/app/integrations/: outbound_rest.py
ipiranga-python-integration-factory/ipiranga-python-integration-factory/templates/rest/app/services/: mapper.py
ipiranga-python-integration-factory/ipiranga-python-integration-factory/tests/: test_cli.py  test_rest_renderer.py  test_scaffold.py  test_validators.py
templates/rest/: README.md  settings.prod.yml
templates/rest/app/: main.py
templates/rest/app/domain/: dme_input.py
tests/: __init__.py  test_rest_renderer.py  test_spec_loader.py  test_validators.py
